ssi auth flow in gui works
