# gui/shared/src/data/orval/model/index.ts
@@ -54,6 +54,9 @@ export * from './datasetDto';
 export * from './datasetEditDto';
 export * from './datasetMinimized';
 export * from './datasetNewDto';
+export * from './did';
+export * from './didVerificationMethod';
+export * from './didVerificationMethodPublicKeyJwk';
 export * from './distribution';
 export * from './distributionDto';
 export * from './distributionEditDto';
@@ -173,6 +176,9 @@ export * from './odrlPolicyInfoProfile';
 export * from './odrlProhibition';
 export * from './offerDto';
 export * from './offerDtoOfferContent';
+export * from './oidc4vciRequestDto';
+export * from './oidc4vpRequestDto';
+export * from './onboardProviderDto';
 export * from './parameterDefinition';
 export * from './parameterDefinitionAutoFilledType';
 export * from './parameterDefinitionParamType';
@@ -243,6 +249,8 @@ export * from './transferRPCTerminationBody';
 export * from './transferStartMessageDto';
 export * from './transferSuspensionMessageDto';
 export * from './transferTerminationMessageDto';
+export * from './vCRequestCrossUserDto';
+export * from './vCRequestDto';
 export * from './version';
 export * from './versionBinding';
 export * from './versionIdentifierType';
